--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
 body {
     text-align: center;
 }
+
+.modal__background {
+    display: none;
+    position: absolute;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.modal__container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.modal__header {
+    font-style: Arial;
+    font-size: 50px;
+    font-weight: bold;
+}
